# PINNs_piezoelectricity

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/direct/: model_PINN_direct_paper_3.pt
models/indirect/: model_PINN_indirect_paper_3.pt
notebooks/: PINN_pz_v3_directo.ipynb  geom_creation.ipynb
notebooks/revision/: 00_fem_reference.ipynb  A_architecture_ablation.ipynb  B_hyperparameters.ipynb  CLUSTER2_literature_gap.md  C_metrics_and_loss_curves.ipynb  D_efficiency.ipynb  E_generalization.ipynb  README.md  _build_notebooks.py
scripts/: __init__.py  evaluate.py  generate_geometry.py  run_all.py  train_direct.py  train_indirect.py
src/pinn_piezo/: __init__.py  config.py  evaluation.py  fem.py  geometry.py  materials.py  metrics.py  plotting.py
src/pinn_piezo/direct/: __init__.py  losses.py  model.py  train.py
src/pinn_piezo/indirect/: __init__.py  losses.py  model.py  standard.py  train.py
